Upgrade GWT dependencies in order to use Java streams