@@ -27,7 +27,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Lists;
 import com.google.gwt.core.client.GWT;
@@ -52,6 +51,7 @@ import org.jetbrains.annotations.NonNls;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import static java.util.stream.Collectors.toList;
 import static org.jboss.hal.dmr.ModelDescriptionConstants.*;
 import static org.jboss.hal.resources.CSS.alert;
 import static org.jboss.hal.resources.CSS.alertInfo;
@@ -281,11 +281,10 @@ public class ModelNodeForm<T extends ModelNode> extends DefaultForm<T> {
         this.resetCallback = builder.resetCallback;
 
         List<Property> properties = new ArrayList<>();
-        //noinspection Guava
-        List<Property> filteredProperties = FluentIterable
-                .from(builder.metadata.getDescription().getAttributes(builder.attributePath))
+        List<Property> filteredProperties = builder.metadata.getDescription().getAttributes(builder.attributePath)
+                .stream()
                 .filter(new PropertyFilter(builder))
-                .toList();
+                .collect(toList());
         LinkedHashMap<String, Property> filteredByName = new LinkedHashMap<>();
         for (Property property : filteredProperties) {
             filteredByName.put(property.getName(), property);
@@ -306,7 +305,7 @@ public class ModelNodeForm<T extends ModelNode> extends DefaultForm<T> {
             properties.addAll(filteredByName.values());
         } else {
             properties.addAll(filteredProperties);
-            Collections.sort(properties, (p1, p2)-> p1.getName().compareTo(p2.getName()));
+            Collections.sort(properties, (p1, p2) -> p1.getName().compareTo(p2.getName()));
         }
 
         int index = 0;
